--- a/KTTH_01.html
+++ b/KTTH_01.html
@@ -91,11 +91,11 @@
         }
         .c1{
             width: 55%;
-            height: 100px;
+            /* height: 100px; */
         }
         .c2{
             width: 40%;
-            height: 100px;
+            /* height: 100px; */
             /* background-color: yellow; */
         }
         .c3{
@@ -127,7 +127,35 @@
             border-bottom: 2px dashed gray;
 
         }
-
+        .c2_des1{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 10px 0 40px 0;
+        }
+        .c2_des2{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            
+        }
+        .c2_des3{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding-top: 20px;
+            
+        }
+        footer{
+            background-color: #1c3451;
+            /* display: flex; */
+            /* position: relative;
+            top: 400px; */
+            height: 35px;
+        }
+        #footer_line{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding-left: 10px;
+            color: #8babd0;
+            line-height: 35px;
+        }
+        #footer_line .white{
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -188,6 +216,26 @@
                 </div>
                 <div class="c2">
                     <p class="c2_para">FlowerBox 360 Info!</p>
+                    <p class="c2_des1">Operating Hours: <br>
+                        Monday-Friday: 9.00am-5.00pm.<br>
+                        Saturday:9.00am-1.00pm.<br>
+                        Sunday: Closed (No Deliveries)<br>
+                        ORDER ONLINE 24/7
+                    </p>
+                    <p class="c2_des2">
+                        Software Engineering Dept. <br>
+                        Information Technology Falcuty<br>
+                        First Floor, H Building
+                    </p>
+                    <p class="c2_des3">
+                        12 Nguyen Van Bao St., Ward 4<br>
+                        Go Vap District<br>
+                        Ho Chi Minh City<br>
+                        Tel: 0283 8940 390<br>
+                        Fax: 0283.9940 954
+                    </p>
+
+
                 </div>
             </div>
             <div class="c3">
@@ -195,7 +243,7 @@
             </div>
         </div>
         <footer>
-
+            <p id="footer_line"><span class="white">Copyright © 2017 - All Rights Reserved -</span> Software Engineering Department - Industrial University of Ho Chi Minh City</p>
         </footer>
     </div>
 </body>
