little update on navbar

--- a/KTTH_01.html
+++ b/KTTH_01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nguyễn Văn Tiến _ 21023261</title>
     <style>
         *{
             padding: 0;
@@ -76,6 +76,9 @@
         .nav_item {
             padding: 10px 15px;
             background-color: #3d73b1;
+        }
+        .nav_item:hover {
+            background-color: #8babd0;
         }
         .nav_item a{
             color: white;
@@ -176,7 +179,7 @@
             width: 250px;
             height: 100px;
             padding: 4px;
-            margin-top: 20px;
+            margin: 20px 0;
             border: 1px solid gray;
         }
         .c3_des{
@@ -256,7 +259,7 @@
                                 <td colspan="2"><label for="mess_ip">Message:</label></td>
                             </tr>
                             <tr>
-                                <td colspan="2"> <textarea name="" id="" cols="41" rows="4"></textarea></td>
+                                <td colspan="2"> <textarea name="" id="mess_ip" cols="41" rows="4"></textarea></td>
                             </tr>
                             <tr>
                                 <tr>
