add background cl for Discount &specials

--- a/KTTH_01.html
+++ b/KTTH_01.html
@@ -132,14 +132,16 @@
             width: 35%;
         }
         .c3{
+            background-color: #f9f9f9;
             width: 30%;
-            height: 100px;
+            padding-left: 15px;
+            margin-top: 40px;
+            margin-right: 10px;
         }
         .main_para{
             font-family: 'Times New Roman', Times, serif;
             width: 95%;
             padding: 40px 0px 15px 0px;
-            margin-left: 15px;
             font-size: 25px;
             font-weight: 400;
             border-bottom: 2px dashed gray;
@@ -165,9 +167,12 @@
             background-color: #f7f7f7;
         }
         .c1_btn{
+            box-sizing: border-box;
             margin-top: 20px;
-            padding: 8px;
-            line-height: 10px;
+            height: 28px;
+            font-size: 15px;
+            padding: 0 8px;
+            line-height: 28px;
             border: 1px solid gray;
         }
         .c2_para{
@@ -194,7 +199,7 @@
         }
         .c3_para{
             font-family: 'Times New Roman', Times, serif;
-            padding: 60px 0px 15px;
+            padding: 15px 0px 15px;
             width: 90%;
             margin-right: 30px;
             font-size: 25px;
